# HatchGameEngine

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  desktop.ini
.github/workflows/: cmake-multi-platform.yml  deploy-docs.yml
Android-Project/: build.gradle
Android-Project/app/: build.gradle
Android-Project/gradle/wrapper/: gradle-wrapper.properties
VisualC/: HatchGameEngine.sln  HatchGameEngine.vcxproj  HatchGameEngine.vcxproj.filters
cmake/: cross_compile.sh
cmake/Dependencies/: FetchGLEW.cmake  FetchSDL2.cmake  Fetchassimp.cmake  Fetchzlib.cmake
docs/: .gitignore  Doxyfile  README.md  header.html
docs/main/: mainpage.md
docs/main/files/: scene.tmx
docs/main/introduction/: hello_world.md  introduction.md
docs/main/manual/: audio_sounds_and_music.md  capabilities.md  distribution.md  entities.md  filesystem_and_input_output.md  gameconfig.md  input.md  manual.md  math.md  rendering.md  resource_management.md  scenes.md  scripting.md  settings.md  shaders.md  sprites_images_and_textures.md  vfs.md
examples/: README.md
examples/libhsl/: sum.c
guides/: Documentation.htm
include/Engine/: Application.h  Error.h  EventHandler.h  FontFace.h  Graphics.h  InputManager.h  Scene.h
include/Engine/Audio/: AudioManager.h  AudioPlayback.h
include/Engine/Bytecode/: API.h  Bytecode.h  BytecodeDebugger.h  Compiler.h  GarbageCollector.h  ScriptEntity.h  ScriptManager.h  ScriptREPL.h  SourceFileMap.h  StandaloneMain.h  StandardLibrary.h  VMThread.h  VMThreadDebugger.h  Value.h  ValuePrinter.h  Values.h
include/Engine/Data/: DefaultFonts.h
include/Engine/Diagnostics/: Clock.h  Log.h  Memory.h  PerformanceMeasure.h  PerformanceViewer.h  RemoteDebug.h
include/Engine/Extensions/: Discord.h
include/Engine/Filesystem/: Directory.h  File.h  Path.h
include/Engine/Hashing/: CRC32.h  CombinedHash.h  FNV1A.h  MD5.h  Murmur.h
include/Engine/IO/: FileStream.h  MemoryStream.h  NetworkStream.h  ResourceStream.h  SDLStream.h  Serializer.h  StandardIOStream.h  Stream.h  TerminalInput.h  TextStream.h  VirtualFileStream.h
include/Engine/Input/: Controller.h  InputAction.h  InputPlayer.h
include/Engine/Math/: Clipper.h  Ease.h  Geometry.h  Math.h  Matrix4x4.h  Random.h  Vector.h
include/Engine/Media/: Decoder.h  MediaPlayer.h  MediaSource.h
include/Engine/Network/: HTTP.h  WebSocketClient.h
include/Engine/Rendering/: FaceInfo.h  GameTexture.h  Material.h  ModelRenderer.h  PolygonRenderer.h  Shader.h  Texture.h  TextureReference.h  VertexBuffer.h  ViewTexture.h
include/Engine/ResourceTypes/: Asset.h  Font.h  IModel.h  ISound.h  ISprite.h  Image.h  MediaBag.h  ResourceManager.h  Resourceable.h
include/Engine/Scene/: LayerGroup.h  LayerTileBuffers.h  SceneInfo.h  SceneLayer.h  ScrollingIndex.h  ScrollingInfo.h  TileConfig.h  TileLayer.h  TileSpriteInfo.h  View.h
include/Engine/TextFormats/: INI.h
include/Engine/Types/: Camera.h  DrawGroupList.h  Entity.h  ObjectList.h  ObjectRegistry.h  Property.h  Tileset.h
include/Engine/Utilities/: ColorUtils.h  PrintBuffer.h  Screenshot.h  StringUtils.h
meta/: clang-format.yml  epilogue.mk  prologue.mk
meta/win/: HatchGameEngine.rc
source/Engine/: Application.cpp  Application.h  Error.cpp  Error.h  EventHandler.cpp  FontFace.cpp  Graphics.cpp  Graphics.h  InputManager.cpp  InputManager.h  Main.cpp  Scene.cpp  Scene.h
source/Engine/Audio/: AudioChannel.h  AudioIncludes.h  AudioManager.cpp  AudioPlayback.cpp  StackNode.h
source/Engine/Bytecode/: API.cpp  API.h  Bytecode.cpp  Bytecode.h  BytecodeDebugger.cpp  BytecodeObject.cpp  BytecodeObjectManager.cpp  Compiler.cpp  Compiler.h  CompilerEnums.h  GarbageCollector.cpp  ScriptEntity.cpp  ScriptManager.cpp  ScriptREPL.cpp  SourceFileMap.cpp  StandaloneMain.cpp  StandardLibrary.cpp  StandardLibrary.h  Types.cpp  Types.h  VMThread.cpp  VMThreadDebugger.cpp  Value.cpp  ValuePrinter.cpp  Values.cpp
source/Engine/Data/: DefaultFonts.cpp  OpenSans-Regular.ttf.inc
source/Engine/Diagnostics/: Clock.cpp  Clock.h  Log.cpp  Memory.cpp  MemoryPools.cpp  MemoryPools.h  PerformanceMeasure.cpp  PerformanceTypes.h  PerformanceViewer.cpp  RemoteDebug.cpp  RemoteDebug.h
source/Engine/Exceptions/: CompilerErrorException.h  ScriptException.h  ScriptREPLException.h
source/Engine/Extensions/: Discord.cpp  Discord.h
source/Engine/Filesystem/: Directory.cpp  Directory.h  File.cpp  File.h  Path.cpp  Path.h
source/Engine/Hashing/: CRC32.cpp  CombinedHash.cpp  FNV1A.cpp  FNV1A.h  MD5.cpp  Murmur.cpp
source/Engine/IO/: FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  NetworkStream.cpp  NetworkStream.h  ResourceStream.cpp  ResourceStream.h  SDLStream.cpp  SDLStream.h  Serializer.cpp  StandardIOStream.cpp  StandardIOStream.h  Stream.cpp  TerminalInput.cpp  TextStream.cpp  TextStream.h  VirtualFileStream.cpp  VirtualFileStream.h
source/Engine/Includes/: AppEvent.h  BijectiveMap.h  ChainedHashMap.h  CompTimeTable.h  DateTime.h  Endian.h  HashMap.h  Operation.h  OrderedHashMap.h  PrintBuffer.h  Standard.h  StandardSDL2.h  Token.h  Version.h
source/Engine/Input/: Controller.cpp  Controller.h  ControllerRumble.h  GameInput.cpp  Input.h  InputAction.cpp  InputAction.h  InputPlayer.cpp
source/Engine/Math/: Clipper.cpp  Clipper.h  Ease.cpp  Ease.h  FixedPoint.h  Geometry.cpp  GeometryTypes.h  Math.cpp  Matrix4x4.cpp  Matrix4x4.h  Random.cpp  Vector.cpp  Vector.h  VectorTypes.h
source/Engine/Media/: Decoder.cpp  Decoder.h  MediaPlayer.cpp  MediaSource.cpp  MediaSource.h
source/Engine/Network/: AndroidWifiP2P.cpp  (+4 more)
source/Libraries/: discord_game_sdk.h  ini.h  jsmn.h  miniz.c  miniz.h  nanoprintf.h  spng.c  spng.h  stb_image.h  stb_rect_pack.h  stb_truetype.h  stb_vorbis.c  stb_vorbis.h
tools/: abc.py  bin2c.py  lmakeheaders  makedotapp.sh
tools/docgen/: README.md  __main__.py  doc_def.py  doc_globals.py  doc_group.py  doxygen_writer.py  enums.py  html_writer.py  marker.py  namespace_info.py  parser.py  style.css  writer.py
tools/makeheaders-src/: main.cpp
tools/makeheaders2-src/: crc32.h  dirent.c  dirent.h  makeheaders.cpp
(+306 files in other folders)
